[package]
name = "Comunicator-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
reqwest = { version = "0.11", features = ["blocking"] }
keyring = "4.0.1"
keyring-core = "1.0.0"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"